--- a/LuggageTrackerTool2/nbproject/project.properties
+++ b/LuggageTrackerTool2/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=luggagetrackertool2.LuggageTrackerTool2
+main.class=main.LuggageTrackerTool2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
