--- a/LuggageTrackerTool2/nbproject/project.properties
+++ b/LuggageTrackerTool2/nbproject/project.properties
@@ -33,8 +33,7 @@ file.reference.mysql-connector-java-5.1.27-bin.jar=lib/mysql-connector-java-5.1.
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.27-bin.jar}:\
-    ${reference.LuggageTrackerTool.jar}
+    ${file.reference.mysql-connector-java-5.1.27-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,8 +62,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.LuggageTrackerTool=../../drunken-octo-wookie
-reference.LuggageTrackerTool.jar=${project.LuggageTrackerTool}/dist/LuggageTrackerTool.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
