--- a/LuggageTrackerTool2/nbproject/project.properties
+++ b/LuggageTrackerTool2/nbproject/project.properties
@@ -34,8 +34,7 @@ file.reference.mysql-connector-java-5.1.27-bin.jar=lib/mysql-connector-java-5.1.
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.27-bin.jar}:\
-    ${libs.eclipselink.classpath}
+    ${file.reference.mysql-connector-java-5.1.27-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
