--- a/LuggageTrackerTool2/nbproject/project.properties
+++ b/LuggageTrackerTool2/nbproject/project.properties
@@ -30,11 +30,17 @@ dist.jar=${dist.dir}/LuggageTrackerTool2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.20.jar=lib/jcommon-1.0.20.jar
+file.reference.jfreechart-1.0.16.jar=lib/jfreechart-1.0.16.jar
 file.reference.mysql-connector-java-5.1.27-bin.jar=lib/mysql-connector-java-5.1.27-bin.jar
+file.reference.pdfbox-app-1.8.2.jar=lib/pdfbox-app-1.8.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.27-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.27-bin.jar}:\
+    ${file.reference.jcommon-1.0.20.jar}:\
+    ${file.reference.jfreechart-1.0.16.jar}:\
+    ${file.reference.pdfbox-app-1.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
