EditPanel GUI fields get filled on edit.
An actual update in the database is not possible yet.

--- a/LuggageTrackerTool2/nbproject/project.properties
+++ b/LuggageTrackerTool2/nbproject/project.properties
@@ -40,7 +40,8 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.20.jar}:\
     ${file.reference.jfreechart-1.0.16.jar}:\
     ${file.reference.mysql-connector-java-5.1.27-bin.jar}:\
-    ${file.reference.pdfbox-app-1.8.2.jar}
+    ${file.reference.pdfbox-app-1.8.2.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
